--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,9 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@100..900&display=swap');
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+
+ font-family: "Vazirmatn", sans-serif;
+  
   line-height: 1.5;
 }
 
